--- a/pronto/views/report_stockpicking.xml
+++ b/pronto/views/report_stockpicking.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <report
-        string="Picking Operations"
+        string="Remito PRONTO"
         id="pronto_action_report_picking"
         model="stock.picking"
         report_type="qweb-pdf"
@@ -19,10 +19,109 @@
             </t>
         </template> -->
     
+<template id="monthly_report_header" inherit_id="web.external_layout_standard">
+    <xpath expr="//div[hasclass('header')]" position="replace">
+        <div class="header">
+            <div class="row">
+                <div class="col-xs-3">
+                    
+                </div>
+                <div class="col-xs-9 text-right" style="margin-top:20px;">
+                
+                </div>
+            </div>
+            <div class="row zero_min_height">
+                <div class="col-xs-12">
+                    <div style="border-bottom: 1px solid black;"/>
+                </div>
+            </div>        
+        </div>
+    </xpath>
+    <xpath expr="//div[hasclass('footer')]" position="replace">
+        <h5>Custom footer</h5>
+    </xpath>
+</template>
+
         <template id="report_picking">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
-                    <span><strong>Warehouse Address:</strong></span>
+                    <t t-call="pronto.monthly_report_header">
+                        <div class="page">
+                            <br/>
+                            <div class="row">
+                                <div class="col-6">
+                                    <span><strong>Columna</strong></span>
+                                </div>
+                                <div class="col-6">
+                                    <span><strong>Columna 2</strong></span>
+                                </div>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="row">
+                                <div class="col-4">
+                                    <span><strong>Columna 1</strong></span>
+                                </div>
+                                <div class="col-4">
+                                    <span><strong>Columna 2</strong></span>
+                                </div>
+                                <div class="col-4">
+                                    <span><strong>Columna 3</strong></span>
+                                </div>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="row">
+                                <div class="col-3">
+                                    <span><strong>Columna 1</strong></span>
+                                </div>
+                                <div class="col-3">
+                                    <span><strong>Columna 2</strong></span>
+                                </div>
+                                <div class="col-3">
+                                    <span><strong>Columna 3</strong></span>
+                                </div>
+                                <div class="col-3">
+                                    <span><strong>Columna 4</strong></span>
+                                </div>
+                            </div>
+                            <br/>
+                            <br/>
+                            <div class="row">
+                                <div class="col-2">
+                                    <span><strong>Columna 1</strong></span>
+                                </div>
+                                <div class="col-8">
+                                    <span><strong>Columna 2</strong></span>
+                                </div>
+                                <div class="col-2">
+                                    <span><strong>Columna 3</strong></span>
+                                </div>
+                            </div>
+                        </div>
+                        <br/>
+                        <br/>
+                        <div class="row">
+                            <div class="col-2">
+                                <span><strong>Columna 1</strong></span>
+                            </div>
+                            <div class="col-2">
+                                <span><strong>Columna 2</strong></span>
+                            </div>
+                            <div class="col-2">
+                                <span><strong>Columna 3</strong></span>
+                            </div>
+                            <div class="col-2">
+                                <span><strong>Columna 4</strong></span>
+                            </div>
+                            <div class="col-2">
+                                <span><strong>Columna 5</strong></span>
+                            </div>
+                            <div class="col-2">
+                                <span><strong>Columna 6</strong></span>
+                            </div>
+                        </div>
+                    </t>
                 </t>
             </t>
         </template>
