--- a/pronto/views/report_stockpicking.xml
+++ b/pronto/views/report_stockpicking.xml
@@ -50,33 +50,33 @@
                             <br/>
                             <div class="row">
                                 <div class="col-6">
-                                    <span><strong>Columna</strong></span>
+                                    <span><strong>Cliente:</strong><span t-field="o.partner_id.name"/></span>
                                 </div>
                                 <div class="col-6">
-                                    <span><strong>Columna 2</strong></span>
+                                    <span><strong>Fecha efectiva:</strong><span t-field="o.date_done" t-options='{"format": "dd/MM/yyyy"}'/></span>
                                 </div>
                             </div>
                             <br/>
                             <br/>
                             <div class="row">
                                 <div class="col-4">
-                                    <span><strong>Columna 1</strong></span>
+                                    <span><strong>Remito</strong><t t-esc="o.voucher_ids.name" /></span>
                                 </div>
                                 <div class="col-4">
-                                    <span><strong>Columna 2</strong></span>
+                                    <span><strong>IVA: </strong><t t-esc="o.partner_id.afip_responsability_type_id.name" /></span>
                                 </div>
                                 <div class="col-4">
-                                    <span><strong>Columna 3</strong></span>
+                                    <span><strong>Domicilio: </strong><t t-esc="o.partner_id.street" /> - <t t-esc="o.partner_id.city" /> </span>
                                 </div>
                             </div>
                             <br/>
                             <br/>
                             <div class="row">
                                 <div class="col-3">
-                                    <span><strong>Columna 1</strong></span>
+                                    <span><strong>Telefono</strong><t t-esc="o.partner_id.mobile" /></span>
                                 </div>
                                 <div class="col-3">
-                                    <span><strong>Columna 2</strong></span>
+                                    <span><strong>Facturas: </strong><t t-esc="o.invoice_ids.display_name" /></span>
                                 </div>
                                 <div class="col-3">
                                     <span><strong>Columna 3</strong></span>
@@ -101,26 +101,27 @@
                         </div>
                         <br/>
                         <br/>
+
+                        <t t-foreach="o.move_ids_without_package" t-as="move">
+                            <div class="row">
+                                <div class="col-2">
+                                    <span><t t-esc="move.product_id.default_code" /></span>
+                                </div>
+                                <div class="col-9">
+                                    <span><t t-esc="move.product_id.name" /></span>
+                                </div>
+                                <div class="col-1">
+                                    <span><t t-esc="move.quantity_done" /></span>
+                                </div>
+                            </div>
+                        </t>
+
                         <div class="row">
-                            <div class="col-2">
-                                <span><strong>Columna 1</strong></span>
-                            </div>
-                            <div class="col-2">
-                                <span><strong>Columna 2</strong></span>
-                            </div>
-                            <div class="col-2">
-                                <span><strong>Columna 3</strong></span>
-                            </div>
-                            <div class="col-2">
-                                <span><strong>Columna 4</strong></span>
-                            </div>
-                            <div class="col-2">
-                                <span><strong>Columna 5</strong></span>
-                            </div>
-                            <div class="col-2">
-                                <span><strong>Columna 6</strong></span>
+                            <div class="col-12">
+                                <span><t t-esc="o.company_id.stock_delivery_note" /></span>
                             </div>
                         </div>
+
                     </t>
                 </t>
             </t>
