--- a/box/views/box_session_views.xml
+++ b/box/views/box_session_views.xml
@@ -48,7 +48,7 @@
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" name="box_cash_in"
                             type="object" icon="fa-level-down"
-                            attrs="{'invisible': [('state', 'not in', ['opened', 'closing_control'])]}">
+                            attrs="{'invisible': [('state', 'not in', ['opened'])]}">
                             <div class="o_field_widget o_stat_info">
                                 <span class="o_stat_text">Ingresar</span>
                                 <span class="o_stat_text">Efectivo</span>
@@ -56,7 +56,7 @@
                         </button>                        
                         <button class="oe_stat_button" name="box_cash_out"
                             type="object" icon="fa-level-down"
-                            attrs="{'invisible': [('state', 'not in', ['opened', 'closing_control'])]}">
+                            attrs="{'invisible': [('state', 'not in', ['opened'])]}">
                             <div class="o_field_widget o_stat_info">
                                 <span class="o_stat_text">Retirar</span>
                                 <span class="o_stat_text">Efectivo</span>
