--- a/box/views/box_session_views.xml
+++ b/box/views/box_session_views.xml
@@ -9,41 +9,21 @@
 
                     <button name="action_box_session_open" type="object" string="ABRIR SESIÓN"
                         attrs="{'invisible' : ['|', ('cash_control', '=', False), ('state', '!=', 'opening_control')]}" class="oe_highlight"/>
-
-                    <!-- <button name="action_box_session_closing_control" type="object" string="End of Session"
-                        attrs="{'invisible' : [('state', '!=', 'opened')]}" 
-                        class="oe_highlight"/> -->
                    
-                    <button name="action_box_session_closing_control" type="object" string="End of Session"
+                    <button name="action_box_session_closing_control" type="object" string="FINALIZAR SESIÓN"
                         attrs="{'invisible' : ['|', ('cash_control', '=', False),('state', '!=', 'opened')]}" 
                         class="oe_highlight"/>
-                    <button name="action_box_session_closing_control" type="object" string="Validate Closing &amp; Post Entries"
+                    <button name="action_box_session_closing_control" type="object" string="CONTROL Y CIERRE"
                         attrs="{'invisible' : ['|', ('cash_control', '=', True),('state', '!=', 'opened')]}"
                         class="oe_highlight"/>
 
-                    <button name="action_box_session_validate" type="object" string="Validate Closing &amp; Post Entries" states="closing_control"
+                    <button name="action_box_session_validate" type="object" string="FINALIZAR SESIÓN" states="closing_control"
                         class="oe_highlight"/>
                     
                     <field name="state" widget="statusbar" statusbar_visible="opening_control,opened,closing_control,closed" nolabel="1" />
                     
                 </header>
                 
-                <!-- <header>
-                    <button name="action_pos_session_open" type="object" string="Open Session"
-                        attrs="{'invisible' : ['|', ('cash_control', '=', False), ('state', '!=', 'opening_control')]}" class="oe_highlight"/>
-                    <button name="action_pos_session_closing_control" type="object" string="End of Session"
-                        attrs="{'invisible' : ['|', ('cash_control', '=', False),('state', '!=', 'opened')]}" 
-                        class="oe_highlight"/>
-                    <button name="action_pos_session_closing_control" type="object" string="Validate Closing &amp; Post Entries"
-                        attrs="{'invisible' : ['|', ('cash_control', '=', True),('state', '!=', 'opened')]}"
-                        class="oe_highlight"/>
-                    <button name="action_pos_session_validate" type="object" string="Validate Closing &amp; Post Entries" states="closing_control"
-                        class="oe_highlight"/>
-                    
-                    <field name="state" widget="statusbar" statusbar_visible="opening_control,opened,closing_control,closed" nolabel="1" />
-                    
-                </header> -->
-
                 <sheet>                    
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" name="box_cash_in"
@@ -83,23 +63,9 @@
                             </div>
                         </button>
 
-                        <!-- <button name="open_cashbox"
-                            class="oe_stat_button"
-                            attrs="{'invisible':['|', ('cash_control', '=', False), ('state', '!=', 'opening_control')]}"
-                            icon="fa-money"
-                            type="object" context="{'balance': 'start'}">
-                            <span class="o_stat_text">Set Opening Balance</span>
-                        </button> -->
-                        <!-- <button name="open_cashbox"
-                            class="oe_stat_button"
-                            attrs="{'invisible':['|', '|', ('cash_control', '=', False), ('state', '=', 'opening_control'), ('state', '=', 'closed')]}"
-                            icon="fa-money"
-                            type="object" context="{'balance': 'end'}">
-                            <span class="o_stat_text">Set Closing Balance</span>
-                        </button> -->
                     </div>
                     <h1 class="oe_title">
-                        Session:
+                        Sesión:
                         <field name="name" attrs="{'invisible': [('name','=','/')]}" class="oe_inline"/>
                     </h1>
                     <group>
@@ -116,10 +82,10 @@
 
                         <div attrs="{'invisible' : [('cash_control', '=', False)]}">
                             <group class="oe_subtotal_footer oe_right">
-                                <field name="cash_register_balance_start" readonly="1" string="Opening Balance" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                                <label for="cash_register_total_entry_encoding" attrs="{'invisible' : [('state', '=', 'opening_control')]}" string="+ Transactions" class="oe_force_bold oe_opening_total"/>
+                                <field name="cash_register_balance_start" readonly="1" string="Saldo Inicial" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <label for="cash_register_total_entry_encoding" attrs="{'invisible' : [('state', '=', 'opening_control')]}" string="+ Transacciones" class="oe_force_bold oe_opening_total"/>
                                 <field name="cash_register_total_entry_encoding" nolabel="1" attrs="{'invisible' : [('state', '=', 'opening_control')]}" class="oe_bold oe_pos_total" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                                <label for="cash_register_balance_end" attrs="{'invisible' : [('state', '=', 'opening_control')]}" string="= Theoretical Closing Balance" class="oe_force_bold oe_opening_total"/>
+                                <label for="cash_register_balance_end" attrs="{'invisible' : [('state', '=', 'opening_control')]}" string="= Saldo Final Teórico" class="oe_force_bold oe_opening_total"/>
                                 <field name="cash_register_balance_end" nolabel="1" attrs="{'invisible' : [('state', '=', 'opening_control')]}" class="oe_bold oe_pos_total" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                             </group>
                             <div class="oe_clear"/>
@@ -133,7 +99,7 @@
                         </div>
                         <div>
                             <group class="oe_subtotal_footer oe_right" attrs="{'invisible': ['|', ('cash_control', '=', False), ('state', '=', 'opening_control')]}">
-                                <field name="cash_register_balance_end_real" string="Real Closing Balance" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="cash_register_balance_end_real" string="Saldo Final Real" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                             </group>
                             <group/>
                             <group/>
@@ -143,10 +109,10 @@
                         </div>
 
                     </group>
-                    <separator string="Summary by Payment Methods" attrs="{'invisible' : [('state', '=', 'opening_control')]}"/>
+                    <separator string="Resumen por medio de pago" attrs="{'invisible' : [('state', '=', 'opening_control')]}"/>
                     <field name="box_session_journal_ids" attrs="{'invisible' : [('state', '=', 'opening_control')]}">
-                        <tree string="Statements">
-                            <field name="name" />
+                        <tree string="Medios de pago">
+                            <!-- <field name="name" /> -->
                             <field name="journal_id" />
                             <field name="balance_start" />
                             <field name="total_entry_encoding" />
