--- a/box/views/menus.xml
+++ b/box/views/menus.xml
@@ -6,7 +6,7 @@
         sequence="10"/>
         <!-- parent="account_accountant.menu_accounting" -->
 
-  <menuitem id="menu_box_dashboard" action="action_pos_config_kanban" parent="menu_box_root" name="Dashboard" sequence="1"/>
+  <menuitem id="menu_box_dashboard" action="action_pos_config_kanban" parent="menu_box_root" name="Información general" sequence="1"/>
 
     <menuitem id="menu_box_box" 
         name="Cajas"
